Add: babel for compile js, easy run using command line

--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
   "name": "docs",
-  "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "dev:lib-install-locally": "npm-run-all link",
-    "dev:build-lib": "npm-run-all dev:compile-sass copy:scss copy:js",
+    "dev:lib-install-locally": "cd future && sudo npm link && cd .. && npm link future",
     "dev:watch-sass": "node-sass src/scss/future.scss future/css/future.css -w",
     "dev:compile-sass": "node-sass src/scss/future.scss future/css/future.css",
+    "dev:watch-js": "babel src/js --watch --out-dir future/js --source-maps inline",
     "copy:scss": "cp -r src/scss future/scss",
-    "copy:js": "cp -r src/js future/js",
-    "link": "cd future && sudo npm link future && .. && npm link future",
-    "unlink": "npm unlink future",
+    "copy:json": "cp -r dist/package.json future/package.json",
+    "unlink": "cd future && sudo npm unlink",
     "prod:build-docs": "ng build",
     "prod:build-lib": "webpack -p",
     "clean": "rm -rf future"
@@ -67,6 +65,7 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.8.3",
+    "@babel/cli": "^7.0.0",
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.7.0",
     "babel-loader": "^8.1.0",
