Add examples (how to use)

--- a/angular.json
+++ b/angular.json
@@ -11,24 +11,24 @@
         }
       },
       "root": "",
-      "sourceRoot": "docs/src",
+      "sourceRoot": "docs",
       "prefix": "app",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/docs",
-            "index": "docs/src/index.html",
-            "main": "docs/src/main.ts",
-            "polyfills": "docs/src/polyfills.ts",
+            "index": "docs/index.html",
+            "main": "docs/main.ts",
+            "polyfills": "docs/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
-              "docs/src/favicon.ico",
-              "docs/src/assets"
+              "docs/favicon.ico",
+              "docs/assets"
             ],
             "styles": [
-              "docs/src/styles.scss"
+              "docs/styles.scss"
             ],
             "scripts": []
           },
@@ -36,8 +36,8 @@
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "docs/src/environments/environment.ts",
-                  "with": "docs/src/environments/environment.prod.ts"
+                  "replace": "docs/environments/environment.ts",
+                  "with": "docs/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
@@ -83,16 +83,16 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "docs/src/test.ts",
-            "polyfills": "docs/src/polyfills.ts",
+            "main": "docs/test.ts",
+            "polyfills": "docs/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": [
-              "docs/src/favicon.ico",
-              "docs/src/assets"
+              "docs/favicon.ico",
+              "docs/assets"
             ],
             "styles": [
-              "docs/src/styles.scss"
+              "docs/styles.scss"
             ],
             "scripts": []
           }
