--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "dev:lib-install-locally": "cd future && sudo npm link && cd .. && npm link future",
+    "dev:lib-install-locally": "npm-run-all dev:compile-js dev:compile-sass copy:json link ",
     "dev:watch-sass": "node-sass src/scss/future.scss future/css/future.css -w",
     "dev:compile-sass": "node-sass src/scss/future.scss future/css/future.css",
+    "dev:compile-js": "babel src/js --out-dir future/js --source-maps inline",
     "dev:watch-js": "babel src/js --watch --out-dir future/js --source-maps inline",
     "copy:scss": "cp -r src/scss future/scss",
     "copy:json": "cp -r dist/package.json future/package.json",
+    "link": "cd future && sudo npm link && cd .. && npm link future",
     "unlink": "cd future && sudo npm unlink",
     "prod:build-docs": "ng build",
     "prod:build-lib": "webpack -p",
