--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "copy:scss": "cp -r src/scss future/scss",
     "copy:json": "cp -r dist/package.json future/package.json",
     "link": "cd future && sudo npm link && cd .. && npm link future",
-    "unlink": "cd future && sudo npm unlink",
+    "unlink": "cd future && sudo npm unlink && cd .. && npm unlink && npm-run-all access clean",
     "prod:build-docs": "ng build",
     "prod:build-lib": "webpack -p",
-    "clean": "rm -rf future"
+    "access": "sudo chown -R $USER /usr/local/lib/node_modules",
+    "clean": "rm -rf node_modules/future"
   },
   "private": true,
   "dependencies": {
@@ -34,6 +35,7 @@
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "ngx-highlightjs": "^4.1.0-beta",
     "node-sass": "^4.14.0",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.1",
