--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "dev:lib-install-locally": "npm-run-all dev:compile-js dev:compile-sass copy:json link ",
-    "dev:watch-sass": "node-sass src/scss/future.scss future/css/future.css -w",
-    "dev:compile-sass": "node-sass src/scss/future.scss future/css/future.css",
-    "dev:compile-js": "babel src/js --out-dir future/js --source-maps inline",
-    "dev:watch-js": "babel src/js --watch --out-dir future/js --source-maps inline",
-    "copy:scss": "cp -r src/scss future/scss",
-    "copy:json": "cp -r dist/package.json future/package.json",
+    "dev:watch-sass": "node-sass src/core/scss/salt.scss src/core/css/out.css -w",
+    "dev:compile-sass": "node-sass src/core/scss/salt.scss src/core/css/out.css",
+    "copy:build": "cp -r src/dist @salt",
+    "copy:readme": "cp -r src/README.md @salt/README.md",
+    "copy:json": "cp -r src/package.json @salt/package.json",
+    "prefix": "postcss src/core/css/out.css --use=autoprefixer --map=false --output=src/dist/core/css/salt.css",
     "link": "cd future && sudo npm link && cd .. && npm link future",
-    "unlink": "cd future && sudo npm unlink && cd .. && npm unlink && npm-run-all access clean",
-    "prod:build-docs": "ng build",
-    "prod:build-lib": "webpack -p",
+    "declare:lib": "cd src && tsc",
+    "webpack:build": "webpack -p",
+    "prod:build-docs": "ng build --prod",
+    "prod:build:lib": "npm-run-all dev:compile-sass declare:lib prefix copy:build clean webpack:build copy:json copy:readme",
     "access": "sudo chown -R $USER /usr/local/lib/node_modules",
-    "clean": "rm -rf node_modules/future"
+    "unlink": "cd future && sudo npm unlink && cd .. && npm unlink && npm-run-all access clean",
+    "clean": "rm -rf src/dist"
   },
   "private": true,
   "dependencies": {
@@ -31,17 +32,17 @@
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "autoprefixer": "^9.7.6",
-    "concat": "^1.0.3",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "ngx-highlightjs": "^4.1.0-beta",
+    "node-sass": "^4.14.0",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.1",
     "postcss-loader": "^3.0.0",
     "rxjs": "~6.5.4",
     "sass-loader": "^8.0.2",
-    "style-loader": "^1.2.1",
+    "ts-loader": "^7.0.2",
     "tslib": "^1.10.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
@@ -53,12 +54,19 @@
     "@angular/cli": "~9.1.0",
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
-    "@types/node": "^12.11.1",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.9.0",
+    "@babel/node": "^7.7.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-typescript": "^7.9.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
+    "babel-loader": "^8.1.0",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
+    "jquery": "^3.5.0",
     "karma": "~4.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
@@ -67,12 +75,6 @@
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.8.3",
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.9.0",
-    "@babel/node": "^7.7.0",
-    "babel-loader": "^8.1.0",
-    "@babel/preset-env": "^7.9.5",
-    "jquery": "^3.5.0"
+    "typescript": "~3.8.3"
   }
 }
