--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -10,5 +10,13 @@
   ],
   "include": [
     "docs/**/*.d.ts"
-  ]
+  ],
+  "angularCompilerOptions": {
+    "annotateForClosureCompiler": true,
+    "skipTemplateCodegen": true,
+    "strictMetadataEmit": true,
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true,
+    "enableResourceInlining": true
+  }
 }
