--- a/package.json
+++ b/package.json
@@ -6,20 +6,19 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "dev:watch-sass": "node-sass src/core/scss/salt.scss src/core/css/out.css -w",
-    "dev:compile-sass": "node-sass src/core/scss/salt.scss src/core/css/out.css",
-    "copy:build": "cp -r src/dist @salt",
-    "copy:readme": "cp -r src/README.md @salt/README.md",
-    "copy:json": "cp -r src/package.json @salt/package.json",
-    "prefix": "postcss src/core/css/out.css --use=autoprefixer --map=false --output=src/dist/core/css/salt.css",
-    "link": "cd future && sudo npm link && cd .. && npm link future",
-    "declare:lib": "cd src && tsc",
-    "webpack:build": "webpack -p",
+    "dev:watch-sass": "node-sass projects/salt/src/lib/scss/salt.scss projects/salt/src/lib/css/main.css -w",
+    "dev:compile-sass": "node-sass projects/salt/src/lib/scss/salt.scss projects/salt/src/lib/css/main.css",
+    "copy:css": "cp -r projects/salt/src/dist/css/ dist/salt/lib/css",
     "prod:build-docs": "ng build --prod",
-    "prod:build:lib": "npm-run-all dev:compile-sass declare:lib prefix copy:build clean webpack:build copy:json copy:readme",
+    "prod:build:lib": "npm-run-all clean:build build:lib dev:compile-sass prefix copy:css webpack:build clean:dist",
+    "prefix": "postcss projects/salt/src/lib/css/main.css --use=autoprefixer --map=false --output=projects/salt/src/dist/css/salt.css",
+    "link": "cd dist/salt && sudo npm link && cd .. && npm link salt",
+    "webpack:build": "webpack -p",
+    "build:lib": "ng build salt",
     "access": "sudo chown -R $USER /usr/local/lib/node_modules",
-    "unlink": "cd future && sudo npm unlink && cd .. && npm unlink && npm-run-all access clean",
-    "clean": "rm -rf src/dist"
+    "unlink": "cd dist/salt && sudo npm unlink && cd .. && npm unlink && npm-run-all access",
+    "clean:build": "rm -rf dist/salt",
+    "clean:dist": "rm -rf projects/salt/src/dist"
   },
   "private": true,
   "dependencies": {
@@ -51,6 +50,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.0",
+    "@angular-devkit/build-ng-packagr": "~0.901.3",
     "@angular/cli": "~9.1.0",
     "@angular/compiler-cli": "~9.1.0",
     "@angular/language-service": "~9.1.0",
@@ -72,6 +72,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "ng-packagr": "^9.0.0",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
