--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -2,7 +2,13 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "paths": {
+      "salt": [
+        "dist/salt/salt",
+        "dist/salt"
+      ]
+    }
   },
   "files": [
     "docs/main.ts",
@@ -10,13 +16,5 @@
   ],
   "include": [
     "docs/**/*.d.ts"
-  ],
-  "angularCompilerOptions": {
-    "annotateForClosureCompiler": true,
-    "skipTemplateCodegen": true,
-    "strictMetadataEmit": true,
-    "fullTemplateTypeCheck": true,
-    "strictInjectionParameters": true,
-    "enableResourceInlining": true
-  }
+  ]
 }
