Fix features: web component integration; Update app structure

--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,7 @@
             ],
             "styles": [
               "docs/styles.scss",
-              "projects/salt/src/lib/scss/salt.scss"
+              "projects/salt/lib/scss/salt.scss"
             ],
             "scripts": [
             ]
@@ -129,7 +129,7 @@
     "salt": {
       "projectType": "library",
       "root": "projects/salt",
-      "sourceRoot": "projects/salt/src",
+      "sourceRoot": "projects/salt/",
       "prefix": "api",
       "architect": {
         "build": {
@@ -147,7 +147,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/salt/src/test.ts",
+            "main": "projects/salt/test.ts",
             "tsConfig": "projects/salt/tsconfig.spec.json",
             "karmaConfig": "projects/salt/karma.conf.js"
           }
@@ -162,6 +162,108 @@
             "exclude": [
               "**/node_modules/**"
             ]
+          }
+        }
+      }
+    },
+    "webcomponent": {
+      "projectType": "application",
+      "schematics": {},
+      "root": "projects/salt/api/webcomponent/app",
+      "sourceRoot": "projects/salt/api/webcomponent/app",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/salt/api/webcomponent",
+            "index": "projects/salt/api/webcomponent/index.html",
+            "main": "projects/salt/api/webcomponent/main.ts",
+            "polyfills": "projects/salt/api/webcomponent/polyfills.ts",
+            "tsConfig": "projects/salt/api/webcomponent/tsconfig.app.json",
+            "aot": true,
+            "assets": [],
+            "styles": [],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "fileReplacements": [],
+              "optimization": true,
+              "outputHashing": "none",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "webcomponent:build"
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "webcomponent:build:production"
+            }
+          }
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "webcomponent:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/salt/api/webcomponent/test.ts",
+            "polyfills": "projects/salt/api/webcomponent/polyfills.ts",
+            "tsConfig": "projects/salt/api/webcomponent/tsconfig.spec.json",
+            "karmaConfig": "projects/salt/api/webcomponent/karma.conf.js",
+            "assets": [],
+            "styles": [],
+            "scripts": []
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/salt/api/webcomponent/tsconfig.app.json",
+              "projects/salt/api/webcomponent/tsconfig.spec.json",
+              "projects/salt/api/webcomponent/e2e/tsconfig.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        },
+        "e2e": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "projects/salt/api/webcomponent/e2e/protractor.conf.js",
+            "devServerTarget": "webcomponent:serve"
+          },
+          "configurations": {
+            "production": {
+              "devServerTarget": "webcomponent:serve:production"
+            }
           }
         }
       }
