--- a/package.json
+++ b/package.json
@@ -6,19 +6,20 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "dev:watch-sass": "node-sass projects/salt/src/lib/scss/salt.scss projects/salt/src/lib/css/main.css -w",
-    "dev:compile-sass": "node-sass projects/salt/src/lib/scss/salt.scss projects/salt/src/lib/css/main.css",
-    "copy:css": "cp -r projects/salt/src/dist/css/ dist/salt/lib/css",
+    "dev:watch-sass": "node-sass projects/salt/lib/scss/salt.scss projects/salt/lib/css/main.css -w",
+    "dev:compile-sass": "node-sass projects/salt/lib/scss/salt.scss projects/salt/lib/css/main.css",
+    "copy:css": "cp -r projects/salt/dist/css/ dist/salt/lib/css",
     "prod:build-docs": "ng build --prod",
-    "prod:build:lib": "npm-run-all clean:build build:lib dev:compile-sass prefix copy:css webpack:build clean:dist",
-    "prefix": "postcss projects/salt/src/lib/css/main.css --use=autoprefixer --map=false --output=projects/salt/src/dist/css/salt.css",
+    "prod:build-webcomp": "ng build webcomponent --prod",
+    "prod:build:lib": "npm-run-all clean:build build:lib dev:compile-sass prefix copy:css webpack:build prod:build-webcomp clean:dist",
+    "prefix": "postcss projects/salt/lib/css/main.css --use=autoprefixer --map=false --output=projects/salt/dist/css/salt.css",
     "link": "cd dist/salt && sudo npm link && cd .. && npm link salt",
     "webpack:build": "webpack -p",
     "build:lib": "ng build salt",
     "access": "sudo chown -R $USER /usr/local/lib/node_modules",
     "unlink": "cd dist/salt && sudo npm unlink && cd .. && npm unlink && npm-run-all access",
     "clean:build": "rm -rf dist/salt",
-    "clean:dist": "rm -rf projects/salt/src/dist"
+    "clean:dist": "rm -rf projects/salt/dist"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +27,7 @@
     "@angular/common": "~9.1.0",
     "@angular/compiler": "~9.1.0",
     "@angular/core": "~9.1.0",
+    "@angular/elements": "^9.1.3",
     "@angular/forms": "~9.1.0",
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
@@ -33,6 +35,8 @@
     "autoprefixer": "^9.7.6",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.3",
+    "document-register-element": "^1.7.2",
+    "elements-zone-strategy": "^9.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "ngx-highlightjs": "^4.1.0-beta",
     "node-sass": "^4.14.0",
