Modified package.json scripts

--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "prod:build-webcomp": "ng build webcomponent --prod",
     "prod:build:lib": "npm-run-all clean:build build:lib dev:compile-sass prefix copy:css webpack:build prod:build-webcomp clean:dist",
     "prefix": "postcss projects/salt/lib/css/main.css --use=autoprefixer --map=false --output=projects/salt/dist/css/salt.css",
-    "link": "cd dist/salt && sudo npm link && cd .. && npm link salt",
+    "link": "cd dist/salt && sudo npm link && cd .. && cd .. && npm link salt",
     "webpack:build": "webpack -p",
     "build:lib": "ng build salt",
     "access": "sudo chown -R $USER /usr/local/lib/node_modules",
-    "unlink": "cd dist/salt && sudo npm unlink && cd .. && npm unlink && npm-run-all access",
+    "unlink": "cd dist/salt && sudo npm unlink && cd .. && cd .. && npm unlink && npm-run-all access",
     "clean:build": "rm -rf dist/salt",
     "clean:dist": "rm -rf projects/salt/dist"
   },
