--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
     "dev:compile-sass": "node-sass projects/salt/lib/scss/salt.scss projects/salt/lib/css/main.css",
     "copy:css": "cp -r projects/salt/dist/css/ dist/salt/lib/css",
     "prod:build-docs": "ng build --prod",
-    "prod:build-webcomp": "ng build webcomponent --prod",
-    "prod:build:lib": "npm-run-all clean:build build:lib dev:compile-sass prefix copy:css webpack:build prod:build-webcomp clean:dist",
+    "prod:build:lib": "npm-run-all clean:build build:lib dev:compile-sass prefix copy:css webpack:build clean:dist && ./compileEl.sh",
     "prefix": "postcss projects/salt/lib/css/main.css --use=autoprefixer --map=false --output=projects/salt/dist/css/salt.css",
     "link": "cd dist/salt && sudo npm link && cd .. && cd .. && npm link salt",
     "webpack:build": "webpack -p",
     "build:lib": "ng build salt",
-    "build:webcomponent": "ng run webcomponent:build:production --main='projects/salt/api/webcomponent/app/components/${component}/compile.ts'",
     "access": "sudo chown -R $USER /usr/local/lib/node_modules",
     "unlink": "cd dist/salt && sudo npm unlink && cd .. && cd .. && npm unlink && npm-run-all access",
     "clean:build": "rm -rf dist/salt",
