Change Webcomponent to library

--- a/angular.json
+++ b/angular.json
@@ -166,21 +166,21 @@
         }
       }
     },
-    "webcomponent": {
+    "library": {
       "projectType": "application",
       "schematics": {},
-      "root": "projects/salt/api/webcomponent/app",
-      "sourceRoot": "projects/salt/api/webcomponent/app",
+      "root": "projects/salt/api/library/app",
+      "sourceRoot": "projects/salt/api/library/app",
       "prefix": "app",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "tmp",
-            "index": "projects/salt/api/webcomponent/index.html",
-            "main": "projects/salt/api/webcomponent/main.ts",
-            "polyfills": "projects/salt/api/webcomponent/polyfills.ts",
-            "tsConfig": "projects/salt/api/webcomponent/tsconfig.app.json",
+            "index": "projects/salt/api/library/index.html",
+            "main": "projects/salt/api/library/main.ts",
+            "polyfills": "projects/salt/api/library/polyfills.ts",
+            "tsConfig": "projects/salt/api/library/tsconfig.app.json",
             "aot": true,
             "assets": [],
             "styles": [],
@@ -215,27 +215,27 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "webcomponent:build"
+            "browserTarget": "library:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "webcomponent:build:production"
+              "browserTarget": "library:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "webcomponent:build"
+            "browserTarget": "library:build"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/salt/api/webcomponent/test.ts",
-            "polyfills": "projects/salt/api/webcomponent/polyfills.ts",
-            "tsConfig": "projects/salt/api/webcomponent/tsconfig.spec.json",
-            "karmaConfig": "projects/salt/api/webcomponent/karma.conf.js",
+            "main": "projects/salt/api/library/test.ts",
+            "polyfills": "projects/salt/api/library/polyfills.ts",
+            "tsConfig": "projects/salt/api/library/tsconfig.spec.json",
+            "karmaConfig": "projects/salt/api/library/karma.conf.js",
             "assets": [],
             "styles": [],
             "scripts": []
@@ -245,9 +245,9 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "projects/salt/api/webcomponent/tsconfig.app.json",
-              "projects/salt/api/webcomponent/tsconfig.spec.json",
-              "projects/salt/api/webcomponent/e2e/tsconfig.json"
+              "projects/salt/api/library/tsconfig.app.json",
+              "projects/salt/api/library/tsconfig.spec.json",
+              "projects/salt/api/library/e2e/tsconfig.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -257,12 +257,12 @@
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "projects/salt/api/webcomponent/e2e/protractor.conf.js",
-            "devServerTarget": "webcomponent:serve"
+            "protractorConfig": "projects/salt/api/library/e2e/protractor.conf.js",
+            "devServerTarget": "library:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "webcomponent:serve:production"
+              "devServerTarget": "library:serve:production"
             }
           }
         }
