--- a/examples/react/tsconfig.json
+++ b/examples/react/tsconfig.json
@@ -5,7 +5,7 @@
         "noImplicitAny": false,
         "module": "commonjs",
         "target": "es5",
-        "jsx": "react",
+        "jsx": "preserve",
         "lib": ["es5", "es6", "dom"],
     },
     "include": [
