--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,3 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-typescript"],
-    "plugins": ["dynamic-import-node"]
+    "presets": ["@babel/preset-env", "@babel/preset-typescript"]
 }
